// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 589,
    "width": 395,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          201,
          358,
        ],
        [
          198,
          367,
        ],
        [
          195,
          358,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            198,
            306,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          198,
          243,
        ],
        [
          198,
          279,
        ],
        [
          198,
          321,
        ],
        [
          198,
          358,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 589,
  "id": "amazon",
  "nodes": [
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "AMAZON",
          "width": 53,
        },
      ],
      "parent": null,
      "position": [
        11,
        320,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "Amazon",
    },
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            154,
            80,
          ],
          "text": "S3",
          "width": 22,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            98,
            108,
          ],
          "text": "S3 is a storage service",
          "width": 135,
        },
      ],
      "parent": "amazon",
      "position": [
        38,
        372,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "S3",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            126,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        38,
        63,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "amazon",
  "width": 395,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 1435,
    "width": 946,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          421,
          917,
        ],
        [
          418,
          926,
        ],
        [
          415,
          917,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labels": [],
      "parent": "cloud.backend",
      "points": [
        [
          418,
          828,
        ],
        [
          418,
          856,
        ],
        [
          418,
          888,
        ],
        [
          418,
          917,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          511,
          640,
        ],
        [
          502,
          645,
        ],
        [
          506,
          636,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            583,
            566,
          ],
          "text": "fetches data in zero trust network with sso",
          "width": 249,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            662,
            582,
          ],
          "text": "authentification",
          "width": 90,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          632,
          503,
        ],
        [
          594,
          545,
        ],
        [
          548,
          595,
        ],
        [
          509,
          638,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          366,
          635,
        ],
        [
          368,
          645,
        ],
        [
          360,
          638,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            335,
            574,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          290,
          503,
        ],
        [
          313,
          544,
        ],
        [
          340,
          594,
        ],
        [
          363,
          636,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          245,
          309,
        ],
        [
          242,
          318,
        ],
        [
          239,
          309,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            242,
            243,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          242,
          181,
        ],
        [
          242,
          221,
        ],
        [
          242,
          268,
        ],
        [
          242,
          309,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          717,
          309,
        ],
        [
          714,
          318,
        ],
        [
          711,
          309,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            714,
            243,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          714,
          181,
        ],
        [
          714,
          221,
        ],
        [
          714,
          268,
        ],
        [
          714,
          309,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          421,
          1241,
        ],
        [
          418,
          1250,
        ],
        [
          415,
          1241,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            418,
            1200,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          418,
          1111,
        ],
        [
          418,
          1151,
        ],
        [
          418,
          1199,
        ],
        [
          418,
          1241,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
  ],
  "height": 1435,
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        258,
      ],
      "shape": "rectangle",
      "size": {
        "height": 919,
        "width": 924,
      },
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "BACKEND",
          "width": 60,
        },
      ],
      "parent": "cloud",
      "position": [
        167,
        596,
      ],
      "shape": "rectangle",
      "size": {
        "height": 541,
        "width": 501,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            182,
            80,
          ],
          "text": "Graphql API",
          "width": 95,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            79,
            108,
          ],
          "text": "Component that allows to query data via GraphQL.",
          "width": 301,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        194,
        648,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 448,
      },
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            120,
            74,
          ],
          "text": "Backend Storage",
          "width": 133,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            38,
            99,
          ],
          "text": "The backend storage is a component that stores",
          "width": 286,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            166,
            117,
          ],
          "text": "data.",
          "width": 30,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        237,
        931,
      ],
      "shape": "storage",
      "size": {
        "height": 180,
        "width": 361,
      },
      "title": "Backend Storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            103,
            74,
          ],
          "text": "Admin Panel Webapp",
          "width": 168,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            37,
            100,
          ],
          "text": "The admin panel is a webapp that allows support",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            90,
            117,
          ],
          "text": "staff to manage customer data.",
          "width": 184,
        },
      ],
      "parent": "cloud",
      "position": [
        532,
        323,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 364,
      },
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            79,
            74,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 235,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            46,
            100,
          ],
          "text": "The customer dashboard is a webapp that allows",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            106,
            117,
          ],
          "text": "customers to view their data.",
          "width": 170,
        },
      ],
      "parent": "cloud",
      "position": [
        51,
        323,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 382,
      },
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            124,
            96,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        82,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            120,
            75,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            37,
            100,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            151,
            118,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        532,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 364,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            133,
            80,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            85,
            108,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        258,
        1255,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 946,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 1367,
    "width": 702,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          344,
          876,
        ],
        [
          340,
          885,
        ],
        [
          337,
          876,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            340,
            835,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          340,
          773,
        ],
        [
          340,
          805,
        ],
        [
          340,
          842,
        ],
        [
          340,
          876,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          285,
          579,
        ],
        [
          287,
          589,
        ],
        [
          279,
          583,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            251,
            526,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          213,
          464,
        ],
        [
          234,
          500,
        ],
        [
          259,
          543,
        ],
        [
          282,
          581,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          374,
          581,
        ],
        [
          368,
          589,
        ],
        [
          367,
          579,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            462,
            377,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          493,
          181,
        ],
        [
          461,
          288,
        ],
        [
          406,
          467,
        ],
        [
          372,
          579,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          344,
          1173,
        ],
        [
          340,
          1183,
        ],
        [
          337,
          1173,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            340,
            1132,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          340,
          1070,
        ],
        [
          340,
          1103,
        ],
        [
          340,
          1140,
        ],
        [
          340,
          1173,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
  ],
  "height": 1367,
  "id": "cloudView",
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            10,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        154,
        540,
      ],
      "shape": "rectangle",
      "size": {
        "height": 556,
        "width": 373,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            126,
            95,
          ],
          "text": "Frontend",
          "width": 70,
        },
      ],
      "parent": "cloud",
      "position": [
        180,
        592,
      ],
      "shape": "browser",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            127,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        180,
        890,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        283,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            120,
            75,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            38,
            100,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            152,
            118,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        338,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 364,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            134,
            80,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            85,
            108,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        180,
        1187,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 702,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "boundingBox": {
    "height": 1058,
    "width": 702,
    "x": 0,
    "y": 0,
  },
  "edges": [
    {
      "headArrow": [
        [
          283,
          568,
        ],
        [
          285,
          578,
        ],
        [
          277,
          571,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            251,
            526,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          215,
          464,
        ],
        [
          235,
          497,
        ],
        [
          259,
          535,
        ],
        [
          279,
          569,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          374,
          570,
        ],
        [
          368,
          577,
        ],
        [
          368,
          568,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            460,
            377,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          493,
          181,
        ],
        [
          460,
          285,
        ],
        [
          406,
          458,
        ],
        [
          372,
          568,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          344,
          864,
        ],
        [
          340,
          874,
        ],
        [
          337,
          864,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            340,
            823,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          340,
          761,
        ],
        [
          340,
          794,
        ],
        [
          340,
          831,
        ],
        [
          340,
          864,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
  ],
  "height": 1058,
  "id": "index",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        283,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            140,
            96,
          ],
          "text": "cloud",
          "width": 42,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        180,
        580,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            120,
            75,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            38,
            100,
          ],
          "text": "Support engineers are responsible for supporting",
          "width": 290,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            152,
            118,
          ],
          "text": "customers",
          "width": 62,
        },
      ],
      "parent": null,
      "position": [
        338,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 364,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            134,
            80,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            85,
            108,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        180,
        878,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "width": 702,
}
`;
